# RFExcel

./: .gitignore  CHANGELOG.md  Composition.drawio  LICENSE  README.md  RFExcel.drawio  ctufit-thesis.tex  data.xlsx  poznamky.txt  pyproject.toml  pyrightconfig.json  requirements.txt  robot-tests.sh
.github/workflows/: release-please.yml  semantic-pr.yml  tests.yml  update-docs.yml
docs/: RFExcel.html
src/: __main__.py
src/rfexcel/: RFExcel.py  RFExcelLibrary.py  __init__.py  rfexcel_constants.py
src/rfexcel/advice/: interceptors.py
src/rfexcel/backend/interfaces/: i_library.py
src/rfexcel/backend/metadata/: csv_metadata.py  i_metadata.py  null_metadata.py  xls_metadata.py  xlsx_metadata.py
src/rfexcel/backend/reader/: csv_edit_reader.py  csv_stream_reader.py  i_reader.py  null_reader.py  xls_on_demand_reader.py  xls_standard_reader.py  xls_standart_reader.py  xlsx_edit_reader.py  xlsx_stream_reader.py
src/rfexcel/backend/resource/: __init__.py  csv_resource.py  i_resource.py  null_resource.py  xls_resource.py  xlsx_resource.py
src/rfexcel/backend/style/: i_style.py  null_style.py  xls_style.py  xlsx_style.py
src/rfexcel/backend/writer/: csv_writer.py  i_writer.py  null_writer.py  xls_writer.py  xlsx_writer.py
src/rfexcel/exception/: library_exceptions.py
src/rfexcel/factory/: workbook_factory.py
src/rfexcel/model/: common_model.py
src/rfexcel/model/cell_data/: i_raw_cell_data.py  null_raw_cell_data.py  xls_raw_cell_data.py  xlsx_raw_cell_data.py
src/rfexcel/model/raw_data/: csv_raw_row_data.py  i_raw_row_data.py  null_raw_row_data.py  xls_raw_row_data.py  (+1 more)
src/rfexcel/utils/: library_logger.py  types.py  utilities.py
src/rfexcel/utlis/: types.py  utilities.py
tests/pyth/: conftest.py  test_data.py  workbook_factory_test.py
tests/pyth/integration/: test_add_row.py  test_add_rows.py  test_add_sheet.py  test_append_row.py  test_append_rows.py  test_close_workbook.py  test_compare_data_to.py  test_create_workbook.py  test_delete_row.py  test_delete_rows.py  test_delete_sheet.py  test_get_cell.py  test_get_row.py  test_get_rows.py  test_insert_row.py  test_list_sheet_names.py  test_load_workbook.py  test_save_workbook.py  test_set_cell.py  test_sparse.py  test_sparse_xlsx.py  test_switch_sheet.py  test_switch_source.py  test_update_values.py
tests/pyth/unit/: test_library_logger.py  test_raw_cell_data.py  test_raw_row_data.py  test_utilities.py
tests/resources/: .~lock.data.xlsx#  .~lock.example.xls#  data.csv  data.xlsx  data2.xlsx  example.xls  rozvrh.xlsx
tests/robot/: example.robot  sanity_check.robot
text/: bib-database.bib  ctufit-thesis.tex  text.tex
text/text/: bib-database.bib  medium.tex  text.tex
(+2 files in other folders)
