[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RFExcel"
version = "0.8.0"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.0.0",
    "robotframework>=7.0.0",
    "xlrd>=2.0.2"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
line-ending = "lf"
