[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RFExcel"
version = "0.9.0"
description = "A Robot Framework library for reading, writing, and manipulating Excel and CSV files"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "boumasim" }
]
requires-python = ">=3.10"
keywords = [
    "robotframework",
    "excel",
    "xlsx",
    "xls",
    "csv",
    "testing",
    "automation",
    "qa"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Library",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
dependencies = [
    "openpyxl>=3.0.0",
    "robotframework>=7.0.0",
    "xlrd>=2.0.2"
]

[project.urls]
Homepage = "https://github.com/boumasim/RFExcel"
Documentation = "https://boumasim.github.io/RFExcel/RFExcel.html"
Repository = "https://github.com/boumasim/RFExcel"
Changelog = "https://github.com/boumasim/RFExcel/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/boumasim/RFExcel/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 200
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
indent-width = 4
line-ending = "lf"
